# snake

./: Cargo.toml  README.md  index.html
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
src/: camera.rs  config.rs  food.rs  game_over.rs  grid.rs  input.rs  main.rs  player.rs  score.rs
