[package]
name = "snake"
version = "0.1.0"
edition = "2024"
authors = ["Christoph Dittmann <github@yozora.eu>"]
description = "A simple Snake clone"
repository = "https://github.com/Christoph-D/snake"
license = "MIT"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy_prototype_lyon = "0.13.0"
rand = "0.9.2"

[dependencies.bevy]
version = "0.16.1"
default-features = false
features = ["bevy_state", "bevy_text", "bevy_ui", "bevy_render", "bevy_window", "bevy_winit", "webgl2"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.bevy]
version = "0.16.1"
features = ["bevy_state", "bevy_text", "bevy_ui", "bevy_render", "bevy_window", "bevy_winit", "dynamic_linking", "x11"]
default-features = false
