[package]
name = "snake"
version = "0.2.0"
edition = "2024"
authors = ["Christoph Dittmann <github@yozora.eu>"]
description = "A simple Snake clone"
repository = "https://github.com/Christoph-D/snake"
license = "MIT"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
getrandom = { version = "0.4.1", features = ["wasm_js"] }
rand = { version = "0.9.2", default-features = false, features = ["std_rng"] }

[dependencies.bevy]
version = "0.18.0"
default-features = false
features = ["bevy_state", "bevy_text", "bevy_ui", "bevy_ui_render", "bevy_render", "bevy_window", "bevy_winit", "webgl2", "bevy_sprite_render"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.bevy]
version = "0.18.0"
features = ["bevy_state", "bevy_text", "bevy_ui", "bevy_ui_render", "bevy_render", "bevy_window", "bevy_winit", "dynamic_linking", "x11", "bevy_sprite_render"]
default-features = false
